--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body>
     <main>
       <img
-        src="./images/image-qr-code.png"
+        src="./image-qr-code.png"
         alt="a QR-Code for visting front-end mentor website"
       />
       <h1>Improve your front-end skills by building projects</h1>
