--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       </p>
     </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Mohammed Sarhad Ahmed</a>.
-    </div>
+    </footer>
   </body>
 </html>
